--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,10 @@
 <resources>
-    <string name="app_name">Curso Kotlin</string>
+    <string name="app_name">Curso 2021 Android Kotlin</string>
+    <string name="forgot_password">¿Has olvidado la contraseña?</string>
+    <string name="main_registro">¡Registrate!</string>
+    <string name="main_password">Contraseña</string>
+    <string name="main_username">Nombre de usuario</string>
+    <string name="main_login">¡Iniciar sesión!</string>
+    <string name="error_blank_password">¡La contraseña no puede estar vacia!</string>
+    <string name="error_blank_username">¡El usuario no puede estar vacio!</string>
 </resources>
