--- a/app/src/main/res/values-ca-rAD/strings.xml
+++ b/app/src/main/res/values-ca-rAD/strings.xml
@@ -4,8 +4,9 @@
     <string name="forgot_password">¿Has oblidat la teva contrasenya?</string>
     <string name="main_registro">¡Registra\'t!</string>
     <string name="main_password">Contrasenya</string>
-    <string name="main_username">Nom d\'usuari</string>
+    <string name="main_username">Correu electronic</string>
     <string name="main_login">¡Iniciar sessió!</string>
     <string name="error_blank_password">¡La contrasenya not pot estar buida!</string>
     <string name="error_blank_username">¡El nom d\'usuario no pot estar buit!</string>
+
 </resources>
