--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,5 +7,5 @@
     <string name="main_login">¡Iniciar sesión!</string>
     <string name="error_blank_password">¡La contraseña no puede estar vacia!</string>
     <string name="error_blank_username">¡El usuario no puede estar vacio!</string>
-
+    <string name="text_fragment_b">"El usuario ha pusaldo el boton: %1$d</string>
 </resources>
