--- a/navigation_app/app/src/main/res/values/strings.xml
+++ b/navigation_app/app/src/main/res/values/strings.xml
@@ -11,10 +11,11 @@
     <string name="main_username">Correo electronico</string>
     <string name="main_login">¡Iniciar sesión!</string>
     <string name="error_blank_password">¡La contraseña no puede estar vacia!</string>
-    <string name="title_activity_main2">MainActivity</string>
-    <string name="title_home">Home</string>
-    <string name="title_dashboard">Dashboard</string>
-    <string name="title_notifications">Notifications</string>
+
+
+    <string name="tittle_productos">Productos</string>
+    <string name="tittle_opiniones">Opiniones</string>
+
 
 
 </resources>
