--- a/firebase/app/src/main/res/values/strings.xml
+++ b/firebase/app/src/main/res/values/strings.xml
@@ -6,10 +6,10 @@
     <string name="main_username">Correo electronico</string>
     <string name="main_login">¡Iniciar sesión!</string>
     <string name="error_blank_password">¡La contraseña no puede estar vacia!</string>
-    <string name="title_activity_producto">ProductoActivity</string>
-    <!--
-    This string is used for square devices and overridden by hello_world in
-    values-round/strings.xml for round devices.
-    -->
-    <string name="hello_world">Hello Square World!</string>
+    <string name="error_equals_password">¡las contraseñas no coinciden!</string>
+    <string name="field_null">Revisa los campos, no pueden estar nullos</string>
+    <string name="password_weak">La contraseña es muy debil, debes poner 6 caracteres</string>
+    <string name="fail_register">No se ha podido registrar el usuario de forma correcta</string>
+
+
 </resources>
